Fix: conflict issues

--- a/website/index.html
+++ b/website/index.html
@@ -40,13 +40,13 @@
   <p>A think tank I took over to promote, educate, and expand the horizon of blockchain technology and its applications.
     I dealt with long-term strategic planning, corporate relations, spokesperson for the organization, and recruitment,
     among others. </p>
-  <b>Electronic Support Analyst</b>
+  <b>Electronic Support Analyst @ SEB</b>
   <p>Hired as a support agent, helping clients with troubleshooting for SEB's electronic systems concerning foreign
     exchange.</p>
   <br />
   <p>I also have a <a href="https://21st-centuryman.github.io/">blog</a>, where I write my views on tech, politics, and
     everything else in between.</p>
-  <p>Hosted on my server in Hässelby Strand.</p>
+  <p>This website is hosted on my server in Hässelby Strand.</p>
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
   <p>-</p>
