--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,7 @@
   <br />
   <p>I also have a <a href="https://21st-centuryman.github.io/">blog</a>, where I write my views on tech, politics, and
     everything else in between.</p>
-  <p>This website is hosted on my server in Hässelby Strand.</p>
+  <p>This website is hosted on my rpi4 in Hässelby Strand using NGINX, lets encrypt, and cloudflare.</p>
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
   <p>-</p>
