--- a/website/index.html
+++ b/website/index.html
@@ -44,9 +44,12 @@
   <p>Hired as a support agent, helping clients with troubleshooting for SEB's electronic systems concerning foreign
     exchange.</p>
   <br />
-  <p>I also have a <a href="https://21st-centuryman.github.io/">blog</a>, where I write my views on tech, politics, and
+  <p>I also have a <a href="https://21st-centuryman.github.io/">blog</a>, where I write my views on tech, society, and
     everything else in between.</p>
+  <br />
   <p>This website is hosted on my rpi4 in Hässelby Strand using NGINX, lets encrypt, and cloudflare.</p>
+  <p>You are here:</p>
+  <img src="./rack.png" alt="Image of my network rack">
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
   <p>-</p>
