Add:raspberry pi text

--- a/website/index.html
+++ b/website/index.html
@@ -47,7 +47,7 @@
   <p>I also have a <a href="https://21st-centuryman.github.io/">blog</a>, where I write my views on tech, society, and
     everything else in between.</p>
   <br />
-  <p>This website is hosted on my rpi4 in Hässelby Strand using NGINX, lets encrypt, and cloudflare.</p>
+  <p>This website is hosted on my Raspberry Pi 4 using NGINX, lets encrypt, and cloudflare.</p>
   <p>You are here:</p>
   <img src="./rack.png" alt="Image of my network rack">
   <br />
