--- a/website/index.html
+++ b/website/index.html
@@ -20,7 +20,7 @@
   <p>A collection of the services I self-host and my experience with backend technologies like NGINX, Linux, Docker,
     etc. As well as overall networking like reverse proxy, SSL, Load balancing, etc.</p>
   <a href="https://github.com/21st-centuryman/riscy_core">Riscy Core: </a>
-  <p>A 32-bit RISC V cpu I am buying on the side of the school. I am really interested in the first principles of
+  <p>A 32-bit RISC V cpu I am building on the side of the school. I am really interested in the first principles of
     computing and would like to build as much of the tech stack by hand as possible.</p>
   <a href="https://github.com/21st-centuryman/advent_of_code">Advent of code: </a>
   <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python, C, and
@@ -35,7 +35,8 @@
     image through marketing consulting, logo design, and web design.</p>
   <b>IT support Assoc II intern @ AWS</b>
   <p>Hired as a data center technician intern responsible for maintenance of AWS’s servers in Eskilstuna, Sweden. Worked
-    with a plethora of hardware responsible for services such as S3, EC2, and VPC.</p>
+    with a plethora of hardware responsible for services such as S3, EC2, and VPC. On this side of this I was also
+    taught how to manage these technologies on the software side.</p>
   <b>Chairman @ KTH Blockchain initative</b>
   <p>A think tank I took over to promote, educate, and expand the horizon of blockchain technology and its applications.
     I dealt with long-term strategic planning, corporate relations, spokesperson for the organization, and recruitment,
