Add: links to top

--- a/website/index.html
+++ b/website/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <a href="https://github.com/21st-centuryman">Github</a>
+  <a href="https://www.linkedin.com/in/calexanderberg/">Linkedin</a>
+  <p>-</p>
   <h3>Alexander Berg</h3>
   <p>I got tired of always updating my web dev websites with new projects and images.</p>
   <p>At this point I have created over 5 of them in different frameworks and libraries.</p>
@@ -54,6 +57,8 @@
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
   <p>-</p>
+  <a href="https://github.com/21st-centuryman">Github</a>
+  <a href="https://www.linkedin.com/in/calexanderberg/">Linkedin</a>
   <a href="mailto:carlalexanderberg@gmail.com">carlalexanderberg@gmail.com</a>
   <p>+46 708-12 85 16</p>
 </body>
