--- a/website/index.html
+++ b/website/index.html
@@ -29,22 +29,22 @@
   <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python, C, and
     Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do APL as well.</p>
   <h3>Resume</h3>
-  <b>QA Analyst @ Nasdaq</b>
+  <u>QA Analyst @ Nasdaq</u>
   <p>Hired as a QA test analyst student worker, responsible for writing tests and automation scripts for Nasdaq internal
     and external
     systems in the European Markets.</p>
-  <b>Founder @ RE-DO consulting</b>
+  <u>Founder @ RE-DO consulting</u>
   <p>Currently on ice. Started RE-DO in June 2020 to complement my studies. We help clients rethink their company
     image through marketing consulting, logo design, and web design.</p>
-  <b>IT support Assoc II intern @ AWS</b>
+  <u>IT support Assoc II intern @ AWS</u>
   <p>Hired as a data center technician intern responsible for maintenance of AWS’s servers in Eskilstuna, Sweden. Worked
     with a plethora of hardware responsible for services such as S3, EC2, and VPC. On this side of this I was also
     taught how to manage these technologies on the software side.</p>
-  <b>Chairman @ KTH Blockchain initative</b>
+  <u>Chairman @ KTH Blockchain initative</u>
   <p>A think tank I took over to promote, educate, and expand the horizon of blockchain technology and its applications.
     I dealt with long-term strategic planning, corporate relations, spokesperson for the organization, and recruitment,
     among others. </p>
-  <b>Electronic Support Analyst @ SEB</b>
+  <u>Electronic Support Analyst @ SEB</u>
   <p>Hired as a support agent, helping clients with troubleshooting for SEB's electronic systems concerning foreign
     exchange.</p>
   <br />
