--- a/website/index.html
+++ b/website/index.html
@@ -6,62 +6,100 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <a href="https://github.com/21st-centuryman">Github</a>
-  <a href="https://www.linkedin.com/in/calexanderberg/">Linkedin</a>
-  <p>-</p>
-  <h3>Alexander Berg</h3>
-  <p>I got tired of always updating my web dev websites with new projects and images.</p>
-  <p>At this point I have created over 5 of them in different frameworks and libraries.</p>
-  <p>Including React, Vue, Leptos, Zola, etc. If you wanna see them you can email me.</p>
-  <p>Now, instead of that, I created this simple HTML file to cut to the chase.</p>
+  <!-- LANDING PAGE -->
+  <div class="landing">
+    <p class="command">$ print(Alex.Tensor)</p>
+    <img class="logo" src="./logo.svg" alt="Alex Berg">
+    <div class="links">
+      <a href="#projects">Alexander Berg</a>
+      <span class="seperator">|</span>
+      <a href="https://github.com/21st-centuryman">Github</a>
+      <span class="seperator">|</span>
+      <a href="#career">Career</a>
+      <span class="seperator">|</span>
+      <a href="mailto:alex@calexanderberg.com">Alex@&lt;this url&gt;</a>
+    </div>
+    <br />
+  </div>
+  <hr>
+  <!-- PROJECT PAGE -->
+  <div class="experience" id="projects">
+    <h3>My favorite projects</h3>
+    <div class="items">
+      <a href="https://github.com/21st-centuryman/Homelab" class="item">
+        <u>Homelab</u>
+        <p>A collection of the services I self-host and my experience with backend technologies like NGINX, Linux,
+          Docker, etc. As well as overall networking like reverse proxy, SSL, Load balancing, etc.</p>
+      </a>
+      <a href="https://github.com/21st-centuryman/riscy_core" class="item">
+        <u>Riscy Core</u>
+        <p>A 32-bit RISC V cpu I am building on the side of the school. I am really interested in the first principles
+          of computing and would like to build as much of the tech stack by hand as possible.</p>
+      </a>
+      <a href="https://github.com/21st-centuryman/advent_of_code" class="item">
+        <u>Advent of code</u>
+        <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python,
+          C, and Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do APL as well.
+        </p>
+      </a>
+    </div>
+
+  </div>
+  <hr>
+  <!-- WORK PAGE -->
+  <div class="experience" id="career">
+    <h3>Resume</h3>
+    <div class="items">
+      <div class="item">
+        <u>QA Analyst @ Nasdaq</u>
+        <p>Hired as a QA test analyst student worker, responsible for writing tests and automation scripts for Nasdaq
+          internal and external systems in the European Markets.</p>
+      </div>
+      <div class="item">
+        <u>Founder @ RE-DO consulting</u>
+        <p>Currently on ice. Started RE-DO in June 2020 to complement my studies. We help clients rethink their company
+          image through marketing consulting, logo design, and web design.</p>
+      </div>
+      <div class="item">
+        <u>IT support Assoc II intern @ AWS</u>
+        <p>Hired as a data center technician intern responsible for maintenance of AWS’s servers in Eskilstuna, Sweden.
+          Worked with a hardware responsible for services such as S3, EC2, and VPC. I was also taught how to
+          manage these technologies on the software side.</p>
+      </div>
+      <div class="item">
+        <u>Chairman @ KTH Blockchain initative</u>
+        <p>A think tank I took over to promote, educate, and expand the horizon of blockchain technology and its
+          applications. I dealt with long-term strategic planning, corporate relations, spokesperson for the
+          organization, and recruitment, among others. </p>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <!-- OTHER PAGE -->
+  <h3>Other</h3>
+  <p>I also have a <a href="https://21st-centuryman.github.io/">&lt;blog/&gt;</a>, where I write my views on tech,
+    society, and everything else in between.</p>
   <br />
-  <h3>My favorite projects</h3>
-  <a href="https://github.com/21st-centuryman/Homelab">Homelab: </a>
-  <p>A collection of the services I self-host and my experience with backend technologies like NGINX, Linux, Docker,
-    etc. As well as overall networking like reverse proxy, SSL, Load balancing, etc.</p>
-  <a href="https://github.com/21st-centuryman/riscy_core">Riscy Core: </a>
-  <p>A 32-bit RISC V cpu I am building on the side of the school. I am really interested in the first principles of
-    computing and would like to build as much of the tech stack by hand as possible.</p>
-  <a href="https://github.com/21st-centuryman/advent_of_code">Advent of code: </a>
-  <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python, C, and
-    Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do APL as well.</p>
-  <h3>Resume</h3>
-  <u>QA Analyst @ Nasdaq</u>
-  <p>Hired as a QA test analyst student worker, responsible for writing tests and automation scripts for Nasdaq internal
-    and external
-    systems in the European Markets.</p>
-  <u>Founder @ RE-DO consulting</u>
-  <p>Currently on ice. Started RE-DO in June 2020 to complement my studies. We help clients rethink their company
-    image through marketing consulting, logo design, and web design.</p>
-  <u>IT support Assoc II intern @ AWS</u>
-  <p>Hired as a data center technician intern responsible for maintenance of AWS’s servers in Eskilstuna, Sweden. Worked
-    with a plethora of hardware responsible for services such as S3, EC2, and VPC. On this side of this I was also
-    taught how to manage these technologies on the software side.</p>
-  <u>Chairman @ KTH Blockchain initative</u>
-  <p>A think tank I took over to promote, educate, and expand the horizon of blockchain technology and its applications.
-    I dealt with long-term strategic planning, corporate relations, spokesperson for the organization, and recruitment,
-    among others. </p>
-  <u>Electronic Support Analyst @ SEB</u>
-  <p>Hired as a support agent, helping clients with troubleshooting for SEB's electronic systems concerning foreign
-    exchange.</p>
+  <p>This website is hosted on my Raspberry Pi 5 using NGINX, lets encrypt, and cloudflare.</p>
+  <p class="command">$ whereami</p>
   <br />
-  <p>I also have a <a href="https://21st-centuryman.github.io/">blog</a>, where I write my views on tech, society, and
-    everything else in between.</p>
-  <br />
-  <p>This website is hosted on my Raspberry Pi 4 using NGINX, lets encrypt, and cloudflare.</p>
-  <p>You are here:</p>
-  <img src="./rack.png" alt="Image of my network rack">
+  <img src="./rack.png" class="logo" alt="Image of my network rack">
+  <p>&lt;yes I know it's not a Linux command, suspend your disbelief&gt;</p>
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
-  <p>-</p>
+  <hr>
   <a href="https://github.com/21st-centuryman">Github</a>
+  <span class="seperator">|</span>
   <a href="https://www.linkedin.com/in/calexanderberg/">Linkedin</a>
   <br />
-  <a href="mailto:carlalexanderberg@gmail.com">carlalexanderberg@gmail.com</a>
-  <p>+46 708-12 85 16</p>
+  <a>+46 708-12 85 16</a>
+  <span class="seperator">|</span>
+  <a href="mailto:alex@calexanderberg.com">Alex@calexanderberg.com</a>
+  <p>cheers</p>
 </body>
 
 </html>
