--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
   <title>Alexander Berg</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./favicon.svg">
   <link rel="stylesheet" href="style.css">
 </head>
 
