Add: new item, and some other fixes

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- LANDING PAGE -->
   <div class="landing">
-    <p class="command">$ print(Alex.Tensor)</p>
+    <p class="command">$ print(Alex.Tensor())</p>
     <img class="logo light-mode" src="logo_light.svg" alt="Logo">
     <!-- <img class="logo dark-mode" src="logo_dark.svg" alt="Logo"> -->
     <div class="links">
@@ -46,6 +46,10 @@
         <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python,
           C, and Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do APL as well.
         </p>
+      </a>
+      <a href="" class="item">
+        <u>Thesis</u>
+        <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
       </a>
     </div>
 
