--- a/website/index.html
+++ b/website/index.html
@@ -28,7 +28,7 @@
   </div>
   <hr>
   <!-- PROJECT PAGE -->
-  <div class="experience" id="projects">
+  <div id="projects">
     <h3>My favorite projects</h3>
     <div class="items">
       <a href="https://github.com/21st-centuryman/Homelab" class="item">
@@ -56,7 +56,7 @@
   </div>
   <hr>
   <!-- WORK PAGE -->
-  <div class="experience" id="career">
+  <div id="career">
     <h3>Resume</h3>
     <div class="items">
       <div class="item">
