Test: remove grid

--- a/website/index.html
+++ b/website/index.html
@@ -30,53 +30,58 @@
   <!-- PROJECT PAGE -->
   <div id="projects">
     <h3>My favorite projects</h3>
-    <a href="https://github.com/21st-centuryman/Homelab" class="item">
-      <u>Homelab</u>
-      <p>A collection of the services I self-host and my experience with backend technologies like NGINX, Linux,
-        Docker, etc. As well as overall networking like reverse proxy, SSL, Load balancing, etc.</p>
-    </a>
-    <a href="https://github.com/21st-centuryman/riscy_core" class="item">
-      <u>Riscy Core</u>
-      <p>A 32-bit RISC V cpu I am building on the side of the school. I am really interested in the first principles
-        of computing and would like to build as much of the tech stack by hand as possible.</p>
-    </a>
-    <a href="https://github.com/21st-centuryman/advent_of_code" class="item">
-      <u>Advent of code</u>
-      <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python,
-        C, and Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do APL as well.
-      </p>
-    </a>
-    <a href="" class="item">
-      <u>Thesis</u>
-      <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
-    </a>
+    <div class="items">
+      <a href="https://github.com/21st-centuryman/Homelab" class="item">
+        <u>Homelab</u>
+        <p>A collection of the services I self-host and my experience with backend technologies like NGINX, Linux,
+          Docker, etc. As well as overall networking like reverse proxy, SSL, Load balancing, etc.</p>
+      </a>
+      <a href="https://github.com/21st-centuryman/riscy_core" class="item">
+        <u>Riscy Core</u>
+        <p>A 32-bit RISC V cpu I am building on the side of the school. I am really interested in the first principles
+          of computing and would like to build as much of the tech stack by hand as possible.</p>
+      </a>
+      <a href="https://github.com/21st-centuryman/advent_of_code" class="item">
+        <u>Advent of code</u>
+        <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python,
+          C, and Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do APL as well.
+        </p>
+      </a>
+      <a href="" class="item">
+        <u>Thesis</u>
+        <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
+      </a>
+    </div>
 
   </div>
   <hr>
   <!-- WORK PAGE -->
   <div id="career">
     <h3>Resume</h3>
-    <div class="item">
-      <u>QA Analyst @ Nasdaq</u>
-      <p>Hired as a QA test analyst student worker, responsible for writing tests and automation scripts for Nasdaq
-        internal and external systems in the European Markets.</p>
-    </div>
-    <div class="item">
-      <u>Founder @ RE-DO consulting</u>
-      <p>Currently on ice. Started RE-DO in June 2020 to complement my studies. We help clients rethink their company
-        image through marketing consulting, logo design, and web design.</p>
-    </div>
-    <div class="item">
-      <u>IT support Assoc II intern @ AWS</u>
-      <p>Hired as a data center technician intern responsible for maintenance of AWS’s servers in Eskilstuna, Sweden.
-        Worked with a hardware responsible for services such as S3, EC2, and VPC. I was also taught how to
-        manage these technologies on the software side.</p>
-    </div>
-    <div class="item">
-      <u>Chairman @ KTH Blockchain initative</u>
-      <p>A think tank I took over to promote, educate, and expand the horizon of blockchain technology and its
-        applications. I dealt with long-term strategic planning, corporate relations, spokesperson for the
-        organization, and recruitment, among others. </p>
+    <div class="items">
+      <div class="item">
+        <u>QA Analyst @ Nasdaq</u>
+        <p>Hired as a QA test analyst student worker, responsible for writing tests and automation scripts for Nasdaq
+          internal and external systems in the European Markets.</p>
+      </div>
+      <div class="item">
+        <u>Founder @ RE-DO consulting</u>
+        <p>Currently on ice. Started RE-DO in June 2020 to complement my studies. We help clients rethink their company
+          image through marketing consulting, logo design, and web design.</p>
+      </div>
+      <div class="item">
+        <u>IT support Assoc II intern @ AWS</u>
+        <p>Hired as a data center technician intern responsible for maintenance of AWS’s servers in Eskilstuna, Sweden.
+          Worked with a hardware responsible for services such as S3, EC2, and VPC. I was also taught how to
+          manage these technologies on the software side.</p>
+      </div>
+      <div class="item">
+        <u>Chairman @ KTH Blockchain initative</u>
+        <p>A think tank I took over to promote, educate, and expand the horizon of blockchain technology and its
+          applications. I dealt with long-term strategic planning, corporate relations, spokesperson for the
+          organization, and recruitment, among others. </p>
+      </div>
+
     </div>
   </div>
   <hr>
