Test: change class name

--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
   <!-- PROJECT PAGE -->
   <div id="projects">
     <h3>My favorite projects</h3>
-    <div class="items">
+    <div class="grid">
       <a href="https://github.com/21st-centuryman/Homelab" class="item">
         <u>Homelab</u>
         <p>A collection of the services I self-host and my experience with backend technologies like NGINX, Linux,
@@ -58,7 +58,7 @@
   <!-- WORK PAGE -->
   <div id="career">
     <h3>Resume</h3>
-    <div class="items">
+    <div class="grid">
       <div class="item">
         <u>QA Analyst @ Nasdaq</u>
         <p>Hired as a QA test analyst student worker, responsible for writing tests and automation scripts for Nasdaq
