--- a/website/index.html
+++ b/website/index.html
@@ -97,13 +97,20 @@
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
   <hr>
-  <a href="https://github.com/21st-centuryman">Github</a>
-  <span class="seperator">|</span>
-  <a href="https://www.linkedin.com/in/calexanderberg/">Linkedin</a>
-  <br />
-  <a>+46 708-12 85 16</a>
-  <span class="seperator">|</span>
-  <a href="mailto:alex@calexanderberg.com">Alex@calexanderberg.com</a>
+  <div class="contact">
+    <div class="contact-item right">
+      <a href="https://github.com/21st-centuryman">Github</a>
+      <a href="tel:+46708128516">+46 708-12 85 16</a>
+    </div>
+    <div class="contact-item">
+      <span class="seperator">|</span>
+      <span class="seperator">|</span>
+    </div>
+    <div class="contact-item">
+      <a href="https://www.linkedin.com/in/calexanderberg/">Linkedin</a>
+      <a href="mailto:alex@calexanderberg.com">Alex@calexanderberg.com</a>
+    </div>
+  </div>
   <p>cheers</p>
 </body>
 
