Add: teenygrad-rs link

--- a/website/index.html
+++ b/website/index.html
@@ -47,8 +47,8 @@
           C, and Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do APL as well.
         </p>
       </a>
-      <a href="" class="item">
-        <u>Thesis</u>
+      <a href="https://github.com/teeny-kth/teenygrad" class="item">
+        <u>Teenygrad-rs</u>
         <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
       </a>
     </div>
