Fix: issues with svg

--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
   <div class="landing">
     <p class="command">$ print(Alex.Tensor())</p>
     <img class="logo light-mode" src="logo_light.svg" alt="Logo">
-    <img class="logo dark-mode" src="logo_dark.svg" alt="Logo">
+    <!--- <img class="logo dark-mode" src="logo_dark.svg" alt="Logo"> --->
     <div class="links">
       <a href="#projects">Alexander Berg</a>
       <span class="seperator">|</span>
