Add: colored favicons

--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,8 @@
   <title>Alexander Berg</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./favicon.svg">
+  <link href="./favicon_dark.svg" rel="icon" media="(prefers-color-scheme: light)">
+  <link href="./favicon_light.svg" rel="icon" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="style.css">
 </head>
 
