--- a/website/index.html
+++ b/website/index.html
@@ -88,8 +88,9 @@
   <hr>
   <!-- OTHER PAGE -->
   <h3>Other</h3>
-  <p>I also have a <a href="https://21st-centuryman.github.io/">&lt;blog/&gt;</a>, where I write my views on tech,
+  <p>I also have a <a href="./blog/output/index.html">&lt;blog/&gt;</a>, where I write my views on tech,
     society, and everything else in between.</p>
+  <p>&lt;Note that the blog is currently being transfered from Zola to a self hosted alternative /&gt</p>
   <p>This website is hosted on my Raspberry Pi 5 using NGINX, lets encrypt, and cloudflare.</p>
   <p class="command">$ whereami</p>
   <br />
