Cut: blog and clean up assets

--- a/website/index.html
+++ b/website/index.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./favicon_dark.svg" rel="icon" media="(prefers-color-scheme: light)">
   <link href="./favicon_light.svg" rel="icon" media="(prefers-color-scheme: dark)">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
   <!-- LANDING PAGE -->
   <div class="landing">
     <p class="command">$ print(Alex.Tensor())</p>
-    <img class="logo light-mode" src="logo_light.svg" alt="Logo">
-    <img class="logo dark-mode" src="logo_dark.svg" alt="Logo">
+    <img class="logo light-mode" src="assets/logo_light.svg" alt="Logo">
+    <img class="logo dark-mode" src="assets/logo_dark.svg" alt="Logo">
     <div class="links">
       <a href="#projects">Alexander Berg</a>
       <span class="seperator">|</span>
@@ -88,12 +88,12 @@
   <hr>
   <!-- OTHER PAGE -->
   <h3>Other</h3>
-  <p>I also have a <a href="./blog/output/index.html">&lt;blog/&gt;</a>, where I write my views on tech,
+  <p>I also have a <a href="./blog/">&lt;blog/&gt;</a>, where I write my views on tech,
     society, and everything else in between.</p>
   <p>This website is hosted on my Raspberry Pi 5 using NGINX, lets encrypt, and cloudflare.</p>
   <p class="command">$ whereami</p>
   <br />
-  <img src="./rack.png" class="logo" alt="Image of my network rack">
+  <img src="assets/rack.png" class="logo" alt="Image of my network rack">
   <p>&lt;yes I know it's not a Linux command, suspend your disbelief&gt;</p>
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
