--- a/website/index.html
+++ b/website/index.html
@@ -88,7 +88,7 @@
   <hr>
   <!-- OTHER PAGE -->
   <h3>Other</h3>
-  <p>I also have a <a href="./blog/">&lt;blog/&gt;</a>, where I write my views on tech,
+  <p>I also have a <a href="./blog/index.html">&lt;blog/&gt;</a>, where I write my views on tech,
     society, and everything else in between.</p>
   <p>This website is hosted on my Raspberry Pi 5 using NGINX, lets encrypt, and cloudflare.</p>
   <p class="command">$ whereami</p>
