Add: tmux bar, we will make this a better website with time

--- a/website/index.html
+++ b/website/index.html
@@ -7,10 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./favicon_dark.svg" rel="icon" media="(prefers-color-scheme: light)">
   <link href="./favicon_light.svg" rel="icon" media="(prefers-color-scheme: dark)">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<header>
+  <div class="header_div">
+    <a href="#">[[cab]]</a>
+    <a href="#projects">0:projects</a>
+    <a href="#career">1:career</a>
+    <!-- <a href="">2:showcase</a> -->
+    <a href="#contact">2:contact</a>
+  </div>
+</header>
+
+<main>
   <!-- LANDING PAGE -->
   <div class="landing">
     <p class="command">$ print(Alex.Tensor())</p>
@@ -97,7 +107,7 @@
   <p>&lt;yes I know it's not a Linux command, suspend your disbelief&gt;</p>
   <br />
   <b>If you're still interested I would love to keep in touch. My information is below:</b>
-  <hr>
+  <hr id="contact">
   <a href="https://github.com/21st-centuryman">Github</a>
   <br />
   <a href="https://www.linkedin.com/in/calexanderberg/">Linkedin</a>
@@ -107,6 +117,6 @@
   <a href="mailto:alex@calexanderberg.com">Alex@calexanderberg.com</a>
   <br />
   <p>cheers</p>
-</body>
+</main>
 
 </html>
