New website baby

--- a/website/contact.html
+++ b/website/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>alexander berg</title>
+  <title>contact - alex berg</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./assets/favicon_dark.svg" rel="icon" media="(prefers-color-scheme: light)">
@@ -19,9 +19,18 @@
 
 <main>
   <div class="landing">
-    <p class="command">$ python3 alex_tensor.py</p>
-    <img class="logo light-mode" src="assets/logo_light.svg" alt="Logo">
-    <img class="logo dark-mode" src="assets/logo_dark.svg" alt="Logo">
+    <p class="command">$ which information</p>
+    <div class="contact"">
+      <a href=" https://github.com/21st-centuryman" target="_blank">/usr/alex/github</a>
+      <br />
+      <a href="https://x.com/21st_centuryman" target="_blank">/usr/alex/x</a>
+      <br />
+      <a href="tel:+46708128516">/usr/alex/phone</a>
+      <br />
+      <a href="mailto:alex@calexanderberg.com">/usr/alex/email</a>
+      <br />
+      <a href="https://www.linkedin.com/in/calexanderberg/" target="_blank">/usr/alex/linkedin</a>
+    </div>
   </div>
 </main>
 
