--- a/website/contact.html
+++ b/website/contact.html
@@ -12,17 +12,18 @@
 
 <header>
   <a href="./index.html">[[cab]]</a>
-  <a href="./about.html">0:about</a>
-  <a href="./showcase.html">1:showcase</a>
-  <a href="./contact.html">2:contact</a>
+  <a href="./about.html">1:about</a>
+  <a href="./showcase.html">2:showcase</a>
+  <a href="./contact.html">3:contact</a>
 </header>
 
 <script>
   document.addEventListener('keydown', function (event) {
     switch (event.key) {
-      case '0': window.location.href = './about.html'; break;
-      case '1': window.location.href = './showcase.html'; break;
-      case '2': window.location.href = './contact.html'; break;
+      case '0': window.location.href = './index.html'; break;
+      case '1': window.location.href = './about.html'; break;
+      case '2': window.location.href = './showcase.html'; break;
+      case '3': window.location.href = './contact.html'; break;
       default: break;
     }
   });
