--- a/website/showcase.html
+++ b/website/showcase.html
@@ -11,19 +11,19 @@
 </head>
 
 <header>
-  <a href="./index.html">[[cab]]</a>
-  <a href="./about.html">1:about</a>
-  <a href="./showcase.html">2:showcase</a>
-  <a href="./contact.html">3:contact</a>
+  <a href="https://calexanderberg.com/">[[cab]]</a>
+  <a href="https://calexanderberg.com/about">1:about</a>
+  <a href="https://calexanderberg.com/showcase">2:showcase</a>
+  <a href="https://calexanderberg.com/contact">3:contact</a>
 </header>
 
 <script>
   document.addEventListener('keydown', function (event) {
     switch (event.key) {
-      case '0': window.location.href = './index.html'; break;
-      case '1': window.location.href = './about.html'; break;
-      case '2': window.location.href = './showcase.html'; break;
-      case '3': window.location.href = './contact.html'; break;
+      case '0': window.location.href = 'https://calexanderberg.com/'; break;
+      case '1': window.location.href = 'https://calexanderberg.com/about'; break;
+      case '2': window.location.href = 'https://calexanderberg.com/showcase'; break;
+      case '3': window.location.href = 'https://calexanderberg.com/contact'; break;
       default: break;
     }
   });
