--- a/website/about.html
+++ b/website/about.html
@@ -11,19 +11,19 @@
 </head>
 
 <header>
-  <a href="https://calexanderberg.com/">[[cab]]</a>
-  <a href="https://calexanderberg.com/about">1:about</a>
-  <a href="https://calexanderberg.com/showcase">2:showcase</a>
-  <a href="https://calexanderberg.com/contact">3:contact</a>
+  <a href="/">[[cab]]</a>
+  <a href="/about">1:about</a>
+  <a href="/showcase">2:showcase</a>
+  <a href="/contact">3:contact</a>
 </header>
 
 <script>
   document.addEventListener('keydown', function (event) {
     switch (event.key) {
-      case '0': window.location.href = 'https://calexanderberg.com/'; break;
-      case '1': window.location.href = 'https://calexanderberg.com/about'; break;
-      case '2': window.location.href = 'https://calexanderberg.com/showcase'; break;
-      case '3': window.location.href = 'https://calexanderberg.com/contact'; break;
+      case '0': window.location.href = '/'; break;
+      case '1': window.location.href = '/about'; break;
+      case '2': window.location.href = '/showcase'; break;
+      case '3': window.location.href = '/contact'; break;
       default: break;
     }
   });
