--- a/website/about.html
+++ b/website/about.html
@@ -74,7 +74,7 @@
   <hr>
   <!-- OTHER PAGE -->
   <h3>Other</h3>
-  <p>I also have a <a href="https://calexanderberg.com/blog">&lt;blog/&gt;</a>, where I write my views on tech,
+  <p>I also have a <a href="https://blog.calexanderberg.com">&lt;blog/&gt;</a>, where I write my views on tech,
     society, and everything else in between.</p>
   <p>This website is hosted on my Raspberry Pi 5 using NGINX, lets encrypt, and cloudflare.</p>
   <p class="command">$ whereami</p>
