Add: ico favicon

--- a/website/contact.html
+++ b/website/contact.html
@@ -5,8 +5,8 @@
   <title>contact - alex berg</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./assets/favicon_dark.svg" rel="icon" media="(prefers-color-scheme: light)">
-  <link href="./assets/favicon_light.svg" rel="icon" media="(prefers-color-scheme: dark)">
+  <link href="./assets/favicon_dark.ico" rel="icon" media="(prefers-color-scheme: light)">
+  <link href="./assets/favicon_light.ico" rel="icon" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="style.css">
 </head>
 
