Seperate main.js file

--- a/website/about.html
+++ b/website/about.html
@@ -8,6 +8,7 @@
   <link href="./assets/favicon_dark.ico" rel="icon" media="(prefers-color-scheme: light)">
   <link href="./assets/favicon_light.ico" rel="icon" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="style.css">
+  <script src="./main.js"></script>
 </head>
 
 <header>
@@ -16,18 +17,6 @@
   <a href="/showcase">2:showcase</a>
   <a href="/contact">3:contact</a>
 </header>
-
-<script>
-  document.addEventListener('keydown', function (event) {
-    switch (event.key) {
-      case '0': window.location.href = '/'; break;
-      case '1': window.location.href = '/about'; break;
-      case '2': window.location.href = '/showcase'; break;
-      case '3': window.location.href = '/contact'; break;
-      default: break;
-    }
-  });
-</script>
 
 <main>
   <br /><br />
