--- a/website/showcase.html
+++ b/website/showcase.html
@@ -29,23 +29,22 @@
     <div class="item-grid">
       <a href="https://github.com/21st-centuryman/Homelab" class="item">
         <u>Homelab</u>
-        <p>A collection of the services I self-host and my experience with backend technologies like NGINX, Linux,
-          Docker, etc. As well as overall networking like reverse proxy, SSL, Load balancing, etc.</p>
+        <p>A collection of the services I self-host, using applications like NGINX, Proxmox, Docker, OPNSense etc. As
+          well as dealing with concepts sucha as reverse proxy, SSL, Load balancing, etc.</p>
       </a>
       <a href="https://github.com/21st-centuryman/riscy_core" class="item">
         <u>Riscy Core</u>
-        <p>A 32-bit RISC V cpu I am building on the side of the school. I am really interested in the first principles
-          of computing and would like to build as much of the tech stack by hand as possible.</p>
+        <p>A 32-bit RISC V cpu I am building on the side of the school. A plan to further explore topics my education
+          barely touched on.</p>
       </a>
       <a href="https://github.com/21st-centuryman/advent_of_code" class="item">
         <u>Advent of code</u>
-        <p>I love programming paradigms, so I am trying to do as many days as I can in AOC using Haskell, Rust, Python,
-          C, and Pytorch (basically rewriting everything in terms of tensors). In the future, I plan to do Agda and APL
-          as well.
+        <p>I love programming paradigms, therefore I'm doing as many days as I can in AOC using Haskell, Rust, Python,
+          C, and Pytorch/tinygrad. In the future, I plan to do Agda and APL as well.
         </p>
       </a>
       <a href="https://github.com/teeny-kth/teenygrad" class="item">
-        <u>Teenygrad-rs</u>
+        <u>Micrograd-rs</u>
         <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
       </a>
     </div>
