--- a/website/about.html
+++ b/website/about.html
@@ -26,7 +26,7 @@
   <p> I have a deep interest in tech; be it messing around with Linux servers, building my own cpu using Verilog,
     creating websites, writing scripts, or AI. </p>
   <p> I am still trying to figure out what I should specialize in. To see my projects I have created at school, work, or
-    personal, check out my <a href="https://github.com/21st-centuryman">&lt;Github/&gt;</a> </p>
+    personal, check out my <a href="https://github.com/21st-centuryman" target="_blank">Github</a> </p>
   <hr>
   <!-- WORK PAGE -->
   <h3>Experience</h3>
@@ -63,7 +63,7 @@
   <hr>
   <!-- OTHER PAGE -->
   <h3>Other</h3>
-  <p>I also have a <a href="https://blog.calexanderberg.com">&lt;blog/&gt;</a>, where I write my views on tech,
+  <p>I also have a <a href="https://blog.calexanderberg.com" target="_blank">blog</a>, where I write my views on tech,
     society, and everything else in between.</p>
   <p>This website is hosted on my Raspberry Pi 5 using NGINX, lets encrypt, and cloudflare.</p>
   <p class="command">$ whereami</p>
