--- a/website/about.html
+++ b/website/about.html
@@ -15,7 +15,8 @@
   <a href="/">[[cab]]</a>
   <a href="/about">1:about</a>
   <a href="/showcase">2:showcase</a>
-  <a href="/contact">3:contact</a>
+  <a href="blog.calexanderberg.com">3:blog</a>
+  <a href="/contact">4:contact</a>
 </header>
 
 <main>
