--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
   <a href="/">[[cab]]</a>
   <a href="/about">1:about</a>
   <a href="/showcase">2:showcase</a>
-  <a href="blog.calexanderberg.com">3:blog</a>
+  <a href="https://blog.calexanderberg.com">3:blog</a>
   <a href="/contact">4:contact</a>
 </header>
 
