--- a/website/showcase.html
+++ b/website/showcase.html
@@ -28,6 +28,12 @@
   <div id="projects">
     <h3>My favorite projects</h3>
     <div class="item-grid">
+      <a href="https://github.com/21st-centuryman/Livermore" class="item">
+        <u>Livermore</u>
+        <p>A collection of two projects for fetching and training machine learning models on stock data. Livermore-fetch
+          is written in Rust and Polars, it uses the yahoo finance api to process and fetch data. Livermore-analyze is a
+          gym enviornment for training machine learning models on this data</p>
+      </a>
       <a href="https://github.com/21st-centuryman/Homelab" class="item">
         <u>Homelab</u>
         <p>A collection of the services I self-host, using applications like NGINX, Proxmox, Docker, OPNSense etc. As
