--- a/website/showcase.html
+++ b/website/showcase.html
@@ -50,9 +50,14 @@
           C, and Pytorch/tinygrad. In the future, I plan to do Agda and APL as well.
         </p>
       </a>
-      <a href="https://github.com/teeny-kth/teenygrad" class="item">
+      <a href="https://github.com/Jay-lex/micrograd" class="item">
         <u>Micrograd-rs</u>
         <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
+      </a>
+      <a href="https://en.wikipedia.org/wiki/Heat_death_of_the_universe" class="item">
+        <u>T- Solve Everything</u>
+        <p id="heath_death"></p>
+        <script src="./showcases/death.js"></script>
       </a>
     </div>
   </div>
