Fix: script type

--- a/website/showcase.html
+++ b/website/showcase.html
@@ -57,7 +57,7 @@
       <a href="https://en.wikipedia.org/wiki/Heat_death_of_the_universe" class="item">
         <u>T- Solve Everything</u>
         <p id="heath_death"></p>
-        <script src="./showcases/death.js"></script>
+        <script type="text/javascript" src="./showcases/death.js"></script>
       </a>
     </div>
   </div>
