--- a/website/showcase.html
+++ b/website/showcase.html
@@ -54,7 +54,7 @@
         <u>Micrograd-rs</u>
         <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
       </a>
-      <a href="https://en.wikipedia.org/wiki/Heat_death_of_the_universe" class="item">
+      <a href="https://en.wikipedia.org/wiki/Heat_death_of_the_universe" target="_blank" class="item">
         <u>T- Solve Everything</u>
         <p id="heath_death"></p>
       </a>
