--- a/website/showcase.html
+++ b/website/showcase.html
@@ -8,8 +8,8 @@
   <link href="./assets/favicon_dark.ico" rel="icon" media="(prefers-color-scheme: light)">
   <link href="./assets/favicon_light.ico" rel="icon" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="style.css">
-  <script src="./main.js"></script>
-  <script src="./showcase.js"></script>
+  <script type="text/javascript" src="./main.js"></script>
+  <script type="text/javascript" src="./app.js"></script>
 </head>
 
 <header>
