--- a/website/showcase.html
+++ b/website/showcase.html
@@ -9,7 +9,7 @@
   <link href="./assets/favicon_light.ico" rel="icon" media="(prefers-color-scheme: dark)">
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="./main.js"></script>
-  <script type="text/javascript" src="./app.js"></script>
+  <script type="text/javascript" src="./showcase.js"></script>
 </head>
 
 <header>
