--- a/website/showcase.html
+++ b/website/showcase.html
@@ -39,7 +39,7 @@
       <a href="https://github.com/21st-centuryman/Homelab" target="_blank" class="item">
         <u>Homelab</u>
         <p>A collection of the services I self-host, using applications like NGINX, Proxmox, Docker, OPNSense etc. As
-          well as dealing with concepts sucha as reverse proxy, SSL, Load balancing, etc.</p>
+          well as dealing with concepts such as reverse proxy, SSL, Load balancing, etc.</p>
       </a>
       <a href="https://github.com/21st-centuryman/riscy_core" target="_blank" class="item">
         <u>Riscy Core</u>
