--- a/website/showcase.html
+++ b/website/showcase.html
@@ -41,10 +41,9 @@
         <p>A collection of the services I self-host, using applications like NGINX, Proxmox, Docker, OPNSense etc. As
           well as dealing with concepts such as reverse proxy, SSL, Load balancing, etc.</p>
       </a>
-      <a href="https://github.com/21st-centuryman/riscy_core" target="_blank" class="item">
-        <u>Riscy Core</u>
-        <p>A 32-bit RISC V cpu I am building on the side of the school. A plan to further explore topics my education
-          barely touched on.</p>
+      <a href="https://github.com/21st-centuryman/riscy_cores" target="_blank" class="item">
+        <u>Riscy Cores</u>
+        <p> A collection of cores I have built in systemverilog. I plan to expand this with a 64 bit pipelined CPU and a neural network DSP</p>
       </a>
       <a href="https://github.com/21st-centuryman/advent_of_code" target="_blank" class="item">
         <u>Advent of code</u>
