--- a/website/contact.html
+++ b/website/contact.html
@@ -21,7 +21,7 @@
 
 <main>
   <div class="landing">
-    <p class="command">$ which information</p>
+    <p class="command">$ which info</p>
     <div class="contact"">
       <a href=" https://github.com/21st-centuryman" target="_blank">/usr/alex/github</a>
       <br />
