Add: hack puzzles

--- a/website/showcase.html
+++ b/website/showcase.html
@@ -43,7 +43,8 @@
       </a>
       <a href="https://github.com/21st-centuryman/riscy_cores" target="_blank" class="item">
         <u>Riscy Cores</u>
-        <p> A collection of cores I have built in systemverilog. I plan to expand this with a 64 bit pipelined CPU and a neural network DSP</p>
+        <p> A collection of cores I have built in systemverilog. I plan to expand this with a 64 bit pipelined CPU and a
+          neural network DSP</p>
       </a>
       <a href="https://github.com/21st-centuryman/advent_of_code" target="_blank" class="item">
         <u>Advent of code</u>
@@ -66,6 +67,10 @@
           <button id="restart">Restart</button>
           <table id="grid"></table>
         </div>
+      </div>
+      <div class="item">
+        <u>Hack puzzle</u>
+        <p>A puzzle I made for my friends at college. Go to /assets/hack.png to try it out for yourself</p>
       </div>
     </div>
   </div>
