--- a/website/showcase.html
+++ b/website/showcase.html
@@ -68,10 +68,10 @@
           <table id="grid"></table>
         </div>
       </div>
-      <div class="item">
+      <a href="https://calexanderberg.com/assets/hack.png" target="_blank" class="item">
         <u>Hack puzzle</u>
         <p>A puzzle I made for my friends at college. Go to /assets/hack.png to try it out for yourself</p>
-      </div>
+      </a>
     </div>
   </div>
 </main>
