--- a/website/about.html
+++ b/website/about.html
@@ -33,7 +33,12 @@
   <h3>Experience</h3>
   <div class="item-grid">
     <div class="item">
-      <u>QA Analyst @ Nasdaq</u>
+      <u>Software Engineer @ SAAB</u>
+      <p>Hired as a softweare engineer for SAAB Surveillance; developing features and securing mission critical systems
+        used by the Swedish military.</p>
+    </div>
+    <div class="item">
+      <u>QA Developer @ Nasdaq</u>
       <p>Hired as a QA test analyst student worker, responsible for writing tests and automation scripts for Nasdaq
         internal and external systems in the European Markets.</p>
     </div>
