Removed hack stuff, cant be fucked to host the onion servers

--- a/website/contact.html
+++ b/website/contact.html
@@ -25,7 +25,7 @@
     <div class="contact"">
       <a href=" https://github.com/21st-centuryman" target="_blank">/usr/alex/github</a>
       <br />
-      <a href="https://x.com/21st_centuryman" target="_blank">/usr/alex/x</a>
+      <a href="https://x.com/calexanderberg" target="_blank">/usr/alex/x</a>
       <br />
       <a href="tel:+46708128516">/usr/alex/phone</a>
       <br />
