Update showcase link

--- a/website/showcase.html
+++ b/website/showcase.html
@@ -52,7 +52,7 @@
           C, and Pytorch/tinygrad. In the future, I plan to do Agda and APL as well.
         </p>
       </a>
-      <a href="https://github.com/Jay-lex/micrograd" target="_blank" class="item">
+      <a href="https://github.com/21st-centuryman/micrograd-rs" target="_blank" class="item">
         <u>Micrograd-rs</u>
         <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
       </a>
