Fix thesis in showcase.html

--- a/website/showcase.html
+++ b/website/showcase.html
@@ -54,7 +54,7 @@
       </a>
       <a href="https://github.com/21st-centuryman/micrograd-rs" target="_blank" class="item">
         <u>Micrograd-rs</u>
-        <p> My thesis project, me and a friend will write an ML framework in Rust. Stay tuned for more! </p>
+        <p> My thesis project, I wrote Micrograd Rust and discussed how Rust memory allocated the framework. </p>
       </a>
       <a href="https://en.wikipedia.org/wiki/Heat_death_of_the_universe" target="_blank" class="item">
         <u>T- Solve Everything</u>
